--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   <h2>Synopsis</h2>
   <p>This is a story about a man who decided to take control of his life, by picking a path to pursue and sticking with it. So yes, Mark, stick with the program and don't go down another rabbit hole.</p>
 
-  <img src="images/kitten.jpg" alt="A cute kitten">
+  <a href="https://www.flickr.com/photos/deborah_s_perspective/14144861329">
+    <img src="images/kitten.jpg" alt="A cute kitten">
+  </a>
 
   <p>HTML was created by the original "web developer", computer scientist <a href="https://en.wikipedia.org/wiki/Tim_Berners-Lee">Tim Berners-Lee</a>. It's not true that Sir Tim invented HTML in order to share pictures of his cat, but it would be cool if it were.</p>
 
@@ -28,7 +30,10 @@
   <img src="https://s.gravatar.com/avatar/1e8ce250ef9d985e3966013eb8e58a33?s=150" alt="Jinkuu's ACTUAL face">
   <p>Chronic daydreamer who also fancies himself an aspiring programmer. Although his memebending skills are great, he has a lot to learn before he can save the world... of hello.</p>
 
-  
+  <a href="https://twitter.com/iAmJinkuu" target="_blank">
+    <img src="images/small_twitter_logo.png" alt="A Twitter Logo">
+  </a>
+  <p><strong>Don't</strong> view my Twitter page by <strong>not</strong> clicking this <a href="https://twitter.com/iAmJinkuu" target="_blank">link</a>.</p>
 
 </body>
 </html>
